--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
 #container {
     display: grid;
-    grid-template-columns: 10vw 10vw 10vw 10vw;
-    grid-template-rows: 10vw 10vw 10vw 10vw;
-    padding: 30px;
+    border-style: solid;
 }
 
 .container-item {
-    background-color: grey;
-    border: solid black;
+    background-color: white;
 }
 
 #box {
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+body {
+    text-align: center;
+    font-family: Chalkduster, Arial, sans-serif;
 }
